--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header.ejs'); %>
     <div class="login-body">
         <div class="login-left-section flex-aj">
-            <div>
+            <div class="heading-content">
                 <h1>Your ToDo App</h1>
                 <p>Elevate your productivity game with our intuitive app</p>
                 <p>Your ultimate productivity companion</p>
