--- a/views/partials/listNames.ejs
+++ b/views/partials/listNames.ejs
@@ -1,4 +1,4 @@
-<div class="right-section flex-aj">
+<div class="right-section hide flex-aj">
     <div class="lists-wrapper flex-aj">
         <h2 class="lists-heading">Your Lists</h2>
         <div class="list-name-wrapper flex-aj">
