--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,9 @@
 <nav class="navbar flex-aj">
     <ul class="nav-items flex-aj">
         <li class="nav-logo">ToDo</li>
-        <li class="nav-item"><a class='nav-link' href="/logout"
+        <li class="nav-item hide"><a class='nav-link' href="/logout"
                 style="color: aliceblue; text-decoration: none;">logout</a></li>
     </ul>
+    <button id="menu-btn" onClick="viewListNames()"><i class="fa-solid fa-bars fa-2xl"
+            style="color: #eeeeec;"></i></button>
 </nav>
