--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,9 +2,8 @@
     padding: 0;
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
-
     background: #1D4350;
     background: -webkit-linear-gradient(to right, #A43931, #1D4350);
     background: linear-gradient(to right, #A43931, #1D4350);
@@ -88,14 +87,11 @@
 .basic-login-wrapper {
     flex-direction: column;
     width: 100%;
-    /* height: 90%; */
     padding: 3rem 0 1rem 0rem;
     gap: 1rem;
     border-radius: 1rem;
 
     box-sizing: border-box;
-    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
-    /* border: 1px solid; */
 }
 
 .login-field-wrapper {
@@ -150,4 +146,75 @@
     border-radius: .5rem;
     box-sizing: border-box;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+
+@media screen and (max-width : 600px) {
+
+    .login-body {
+        flex-direction: column;
+        padding: 1rem 1rem 5rem 1rem;
+        gap: 2rem;
+        /* height: 90rem; */
+        box-sizing: border-box;
+        height: fit-content;
+    }
+
+    .login-left-section {
+        padding: .5rem;
+        font-size: 1.5rem;
+
+        /* display: none; */
+    }
+
+    .heading-content h1 {
+        margin: 0 0 1rem 0;
+    }
+
+    .heading-content p:nth-child(3) {
+        display: none;
+    }
+
+    .login-right-section {
+        padding: 0;
+        border: 1px solid;
+        margin: 0;
+        align-items: unset;
+        font-size: 1rem;
+        height: fit-content;
+
+        /* display: none; */
+    }
+
+    .login-right-section button {
+        font-size: 1rem;
+    }
+
+    .basic-login-wrapper input {
+        font-size: 1rem;
+        padding: 1rem 1rem;
+    }
+
+    .login-wrapper {
+        padding: 3rem 3rem;
+        gap: 0;
+        /* border: 1px solid; */
+        margin: 0;
+        /* height: 35rem; */
+        /* align-items: unset; */
+    }
+
+    .login-btn {
+        margin-top: 1rem;
+        padding: 1rem 3rem;
+    }
+
+    .google-login-btn {
+        padding: 1rem 2rem;
+    }
+
+    .contact-icons {
+        display: none;
+    }
+
 }
