--- a/public/css/partials.css
+++ b/public/css/partials.css
@@ -32,6 +32,11 @@
     border-radius: .4rem;
 }
 
+/* added */
+#menu-btn {
+    display: none;
+}
+
 .footer {
     flex: 5%;
     background: radial-gradient(circle at 74.1% 68.8%, rgb(50, 50, 50) 0%, rgb(0, 0, 0) 99.4%);
